--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -274,24 +274,68 @@ async function loadSchedules() {
         // brak onclick
       } else {
         btn.textContent = t;
-        btn.onclick = () => {
-          document.querySelectorAll('.timeslot-button.selected')
-            .forEach(x => x.classList.remove('selected'));
-          btn.classList.add('selected');
-          document.getElementById('booking-details').style.display = 'block';
-          selTime = t;
-          // teraz filtrujemy listę lekarzy:
+        btn.onclick = async () => {
+  // 1) zaznacz slot
+  document.querySelectorAll('.timeslot-button.selected')
+    .forEach(x => x.classList.remove('selected'));
+  btn.classList.add('selected');
+  document.getElementById('booking-details').style.display = 'block';
+  selTime = t;
+
+  // 2) przygotuj interwał slotu w minutach
+  const durationMin = parseInt(
+    document.getElementById('visit-type')
+      .selectedOptions[0]
+      .dataset.duration, 10);
+  const [h0, m0] = t.split(':').map(n => +n);
+  const slotStartMin = h0*60 + m0;
+  const slotEndMin   = slotStartMin + durationMin - 1;
+
+  // 3) filtr harmonogramu i reset selecta
   const doctorSelect = document.getElementById('doctor-select');
-  // resetujemy wybór
   doctorSelect.value = '';
   doctorSelect.selectedIndex = 0;
-  // dla każdego <option> (poza placeholderem) ustawiamy disabled zgodnie z harmonogramem
+
+  // 4) najpierw wyznacz lekarzy w ogóle dostępnych wg grafiku
+  const candidates = [];
   Array.from(doctorSelect.options).forEach(opt => {
-    if (!opt.value) return;         // pomijamy „Wybierz lekarza”
-    const ok = isDoctorAvailable(opt.value, dateObj, t);
-    opt.disabled = !ok;
-        });
+    if (!opt.value) return;   // pomiń placeholder
+    const okSchedule = isDoctorAvailable(opt.value, dateObj, t);
+    opt.disabled = !okSchedule;
+    if (okSchedule) candidates.push(opt.value);
+  });
+
+  // 5) teraz pobierzmy ich wizyty w tym dniu:
+  const busyMap = {};  // doctorId => [{startMin,endMin},...]
+  await Promise.all(candidates.map(async docId => {
+    const q = query(
+      collection(db, 'users', docId, 'bookings'),
+      where('date','==', selDate)
+    );
+    const snap = await getDocs(q);
+    busyMap[docId] = snap.docs.map(d => {
+      const data = d.data();
+      const [hs, ms] = data.hour.split(':').map(n=>+n);
+      const [he, me] = data.endhour.split(':').map(n=>+n);
+      return {
+        startMin: hs*60 + ms,
+        endMin:   he*60 + me
       };
+    });
+  }));
+
+  // 6) wyłącz tych, którzy mają overlap:
+  Array.from(doctorSelect.options).forEach(opt => {
+    if (!opt.value) return;
+    if (opt.disabled) return; // już niedostępni wg grafiku
+    const bookings = busyMap[opt.value] || [];
+    // czy którykolwiek booking nakłada się na nasz slot?
+    const conflict = bookings.some(b =>
+      !(b.endMin < slotStartMin || b.startMin > slotEndMin)
+    );
+    if (conflict) opt.disabled = true;
+  });
+};
       }
       cont.append(btn);
     }
