--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -284,7 +284,7 @@ async function loadSchedules() {
 
       let selDate = '', selTime = '';
       let selDateObj = null;
-      window.generateTimeSlots = dateObj => {
+      window.generateTimeSlots = async dateObj => {
   const cont = document.getElementById('timeslots');
   cont.innerHTML = '';
   selDateObj = dateObj;
