--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -320,13 +320,17 @@
   document.getElementById('booking-details').style.display = 'block';
   selTime = t;
 
+  // jeśli nie wybrano jeszcze rodzaju wizyty, to kończymy
+  const visitTypeEl = document.getElementById('visit-type');
+  const durationAttr = visitTypeEl.selectedOptions[0]?.dataset.duration;
+  if (!durationAttr) {
+    return;
+  }
+
   // 2) przygotuj interwał slotu w minutach
-  const durationMin = parseInt(
-    document.getElementById('visit-type')
-      .selectedOptions[0]
-      .dataset.duration, 10);
+  const durationMin = parseInt(durationAttr, 10);
   const [h0, m0] = t.split(':').map(n => +n);
-  const slotStartMin = h0*60 + m0;
+  const slotStartMin = h0 * 60 + m0;
   const slotEndMin   = slotStartMin + durationMin - 1;
 
   // 3) filtr harmonogramu i reset selecta
@@ -334,59 +338,44 @@
   doctorSelect.value = '';
   doctorSelect.selectedIndex = 0;
 
-  // 4) najpierw wyznacz lekarzy w ogóle dostępnych wg grafiku
+  // 4) wyznacz lekarzy dostępnych wg grafiku
   const candidates = [];
   Array.from(doctorSelect.options).forEach(opt => {
-    if (!opt.value) return;   // pomiń placeholder
+    if (!opt.value) return;
     const okSchedule = isDoctorAvailable(opt.value, dateObj, t);
     opt.disabled = !okSchedule;
     if (okSchedule) candidates.push(opt.value);
   });
 
-  // 5) teraz pobierzmy ich wizyty w tym dniu:
-  const busyMap = {};  // doctorId => [{startMin,endMin},...]
+  // 5) pobierz istniejące wizyty tych kandydatów
+  const busyMap = {};
   await Promise.all(candidates.map(async docId => {
     const q = query(
       collection(db, 'users', docId, 'bookings'),
-      where('date','==', selDate)
+      where('date', '==', selDate)
     );
     const snap = await getDocs(q);
     busyMap[docId] = snap.docs.map(d => {
       const data = d.data();
-      const [hs, ms] = data.hour.split(':').map(n=>+n);
-      const [he, me] = data.endhour.split(':').map(n=>+n);
+      const [hs, ms] = data.hour.split(':').map(n => +n);
+      const [he, me] = data.endhour.split(':').map(n => +n);
       return {
-        startMin: hs*60 + ms,
-        endMin:   he*60 + me
+        startMin: hs * 60 + ms,
+        endMin:   he * 60 + me
       };
     });
   }));
 
-  // 6) wyłącz tych, którzy mają overlap:
+  // 6) wyłącz tych, którzy mają overlap
   Array.from(doctorSelect.options).forEach(opt => {
     if (!opt.value) return;
-    if (opt.disabled) return; // już niedostępni wg grafiku
+    if (opt.disabled) return;
     const bookings = busyMap[opt.value] || [];
-    // czy którykolwiek booking nakłada się na nasz slot?
     const conflict = bookings.some(b =>
       !(b.endMin < slotStartMin || b.startMin > slotEndMin)
     );
     if (conflict) opt.disabled = true;
   });
-          // 7) sprawdź, czy został chociaż jeden lekarz, który zmieści całą wizytę
-  const anyAvailable = Array.from(doctorSelect.options)
-    .some(opt => opt.value && !opt.disabled);
-
-  if (!anyAvailable) {
-    alert(
-      'Brak dostępnych lekarzy dla wybranej długości wizyty.\n' +
-      'Wybierz inną godzinę lub inny typ wizyty.'
-    );
-    // cofnij zaznaczenie godziny i schowaj formularz
-    btn.classList.remove('selected');
-    document.getElementById('booking-details').style.display = 'none';
-    return;
-  }
 };
       }
       cont.append(btn);
@@ -398,6 +387,12 @@
       document.getElementById('confirm-appointment').addEventListener('click', async () => {
   const petSel    = document.getElementById('pet-select');
   const docSel    = document.getElementById('doctor-select');
+        const anyDoctor = Array.from(docSel.options)
+  .some(opt => opt.value && !opt.disabled);
+if (!anyDoctor) {
+  alert('Brak dostępnych lekarzy w tym terminie i długości wizyty. Wybierz inny slot lub zmień typ wizyty.');
+  return;
+}
   const vtSel     = document.getElementById('visit-type');
   const lokalPar  = new URLSearchParams(window.location.search).get('lokal');
   const location  = lokalPar==='1' ? 'Warszawa Centrum' : 'Warszawa Praga';
