--- a/umow-wizyte-lokal.html
+++ b/umow-wizyte-lokal.html
@@ -320,13 +320,15 @@
   document.getElementById('booking-details').style.display = 'block';
   selTime = t;
 
-  // 2) przygotuj interwał slotu w minutach
-  const durationMin = parseInt(
-    document.getElementById('visit-type')
-      .selectedOptions[0]
-      .dataset.duration, 10);
+  // 2.1) pobierz wskazaną długość lub użyj default = 1 minuta (lub 20)
+  const vtSel = document.getElementById('visit-type');
+  const rawDur = vtSel.selectedOptions[0]?.dataset.duration;
+  // tutaj ustawiasz 1 albo np. 20, jeśli wolisz minimalny pełny slot kontroli:
+  const durationMin = parseInt(rawDur, 10) || 1;
+
+  // 2.2) oblicz interwał slotu
   const [h0, m0] = t.split(':').map(n => +n);
-  const slotStartMin = h0*60 + m0;
+  const slotStartMin = h0 * 60 + m0;
   const slotEndMin   = slotStartMin + durationMin - 1;
 
   // 3) filtr harmonogramu i reset selecta
