--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@ button:hover {
       text-decoration: underline;
     }
     .hero {
-      background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
-      height: 400px;
-      position: relative;
+      background-image: url("https://via.placeholder.com/1200x400");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
     }
     .hero-text {
       position: absolute;
