--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@ button:hover {
       background-repeat: no-repeat;
       background-position: center center;
       background-size: cover;
+      height: 400px;
+      position: relative;
     }
     .hero-text {
       position: absolute;
