--- a/admin.html
+++ b/admin.html
@@ -6,12 +6,20 @@
   <title>Panel Administratora – BKRJ Vet</title>
   <style>
     body { margin: 0; font-family: Arial, sans-serif; }
-    header { background: #333; color: #fff; padding: 15px; text-align: center; }
+    header { background: #333; color: #fff; padding: 15px; display: flex; justify-content: space-between; align-items: center; }
     .container { max-width: 1000px; margin: 30px auto; padding: 0 20px; }
     .hidden { display: none; }
     .error { color: red; text-align: center; margin-top: 50px; }
-    nav a { color: #fff; margin: 0 10px; text-decoration: none; }
-    nav a:hover { text-decoration: underline; }
+    nav a, nav button { color: #fff; background: none; border: none; margin: 0 10px; font-size: 1rem; cursor: pointer; }
+    nav a:hover, nav button:hover { text-decoration: underline; }
+    /* Schedule manager styles */
+    #schedule-manager { margin-top: 30px; padding: 20px; border: 1px solid #ccc; border-radius: 5px; background: #fafafa; }
+    #schedule-manager h3 { margin-top: 0; color: #4caf50; }
+    #schedule-manager label { display: block; margin: 10px 0 5px; font-weight: bold; }
+    #schedule-manager select, #schedule-manager input { width: 200px; padding: 8px; border: 1px solid #ccc; border-radius: 4px; font-size: 1rem; }
+    #schedule-manager button { margin-top: 15px; padding: 10px 20px; background: #4caf50; color: #fff; border: none; border-radius: 4px; font-size: 1rem; cursor: pointer; }
+    #schedule-manager button:hover { background: #388e3c; }
+    #schedule-status { margin-top: 10px; }
   </style>
 </head>
 <body>
@@ -19,7 +27,7 @@
     <h1>Panel Administratora</h1>
     <nav>
       <a href="index.html">Strona główna</a>
-      <button id="logoutBtn" style="cursor:pointer;">Wyloguj</button>
+      <button id="logoutBtn">Wyloguj</button>
     </nav>
   </header>
 
@@ -29,8 +37,34 @@
 
   <div id="adminContent" class="container hidden">
     <h2>Witaj w panelu administratora</h2>
-    <p>Tu dodamy funkcje zarządzania użytkownikami, grafikami i wizytami.</p>
-    <!-- dalsze widgety admina -->
+    <p>Tu możesz zarządzać godzinami pracy lekarzy oraz innymi zasobami.</p>
+
+    <section id="schedule-manager">
+      <h3>Zarządzanie grafikiem lekarzy</h3>
+      <label for="doctor-select-admin">Lekarz</label>
+      <select id="doctor-select-admin"><option disabled selected>Wczytywanie...</option></select>
+
+      <label for="day-select">Dzień tygodnia</label>
+      <select id="day-select">
+        <option value="MONDAY">Poniedziałek</option>
+        <option value="TUESDAY">Wtorek</option>
+        <option value="WEDNESDAY">Środa</option>
+        <option value="THURSDAY">Czwartek</option>
+        <option value="FRIDAY">Piątek</option>
+        <option value="SATURDAY">Sobota</option>
+        <option value="SUNDAY">Niedziela</option>
+      </select>
+
+      <label for="start-time">Godzina rozpoczęcia</label>
+      <input type="time" id="start-time" step="60" />
+
+      <label for="end-time">Godzina zakończenia</label>
+      <input type="time" id="end-time" step="60" />
+
+      <button id="save-schedule">Zapisz grafik</button>
+      <p id="schedule-status"></p>
+    </section>
+
   </div>
 
   <div id="errorMessage" class="error hidden">
@@ -41,7 +75,7 @@
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js';
     import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js';
-    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
+    import { getFirestore, doc, getDoc, collection, getDocs, setDoc } from 'https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyCZoVVfUPSyS7zELBqEsLNYuVdBqfSq-BE",
@@ -61,30 +95,76 @@
     const errorEl = document.getElementById('errorMessage');
     const logoutBtn = document.getElementById('logoutBtn');
 
+    // Wylogowanie
     logoutBtn.addEventListener('click', async () => {
       await signOut(auth);
       window.location.href = 'index.html';
     });
 
+    // Sprawdzenie uprawnień
     onAuthStateChanged(auth, async user => {
       if (!user) {
-        // nie zalogowany → przekierowanie do logowania
         window.location.href = 'login.html';
         return;
       }
-      // pobierz dokument użytkownika
       const userDoc = await getDoc(doc(db, 'users', user.uid));
       const data = userDoc.data() || {};
       if (data.role === 'admin') {
-        // administrator: pokaż zawartość
         loadingEl.classList.add('hidden');
         adminEl.classList.remove('hidden');
+        initScheduleManager();
       } else {
-        // nie admin: brak dostępu
         loadingEl.classList.add('hidden');
         errorEl.classList.remove('hidden');
       }
     });
+
+    // ----------------------------------
+    // Zarządzanie grafikiem
+    // ----------------------------------
+    async function initScheduleManager() {
+      const doctorSelect = document.getElementById('doctor-select-admin');
+      const saveBtn = document.getElementById('save-schedule');
+      const statusP = document.getElementById('schedule-status');
+
+      // Załaduj lekarzy
+      const doctorsSnap = await getDocs(
+        query(collection(db, 'users'), where('role', '==', 'doctor'))
+      );
+      doctorSelect.innerHTML = '<option disabled selected>Wybierz lekarza</option>';
+      doctorsSnap.forEach(docSnap => {
+        const d = docSnap.data();
+        const name = d.firstName ? `${d.firstName} ${d.lastName||''}`.trim() : d.email;
+        const opt = document.createElement('option');
+        opt.value = docSnap.id;
+        opt.textContent = name;
+        doctorSelect.append(opt);
+      });
+
+      // Zapis grafiku
+      saveBtn.addEventListener('click', async () => {
+        const docId = doctorSelect.value;
+        const day = document.getElementById('day-select').value;
+        const start = document.getElementById('start-time').value;
+        const end = document.getElementById('end-time').value;
+        if (!docId || !start || !end) {
+          statusP.textContent = 'Uzupełnij wszystkie pola.';
+          statusP.style.color = 'red';
+          return;
+        }
+        try {
+          const ref = doc(db, 'schedules', docId);
+          // Mergujemy pole schedules.day = { start, end }
+          await setDoc(ref, { doctorId: docId, schedules: { [day]: { start, end } } }, { merge: true });
+          statusP.textContent = 'Grafik zapisany.';
+          statusP.style.color = 'green';
+        } catch (e) {
+          console.error(e);
+          statusP.textContent = 'Błąd zapisu: ' + e.message;
+          statusP.style.color = 'red';
+        }
+      });
+    }
   </script>
 </body>
 </html>
